fixed margin-bottom im program section on tablet

--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -5,7 +5,7 @@
 
 .container--program {
   padding-top: 50px;
-  padding-bottom: 33px;
+  padding-bottom: 133px;
   margin: 0 auto;
 
   @include for-phone-only {
